# git-interface

./: README.md
git_gui/: CMakeLists.txt  main.cpp
